@@ -11,7 +11,7 @@ import java.nio.file.attribute.FileTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Read files ordered by lastModified, so new files are loaded at the end
@@ -24,9 +24,8 @@ public class FileLister {
         AtomicInteger filesCounter = new AtomicInteger(0);
         List<Path> resultList = null;
 
-        try {
-            resultList = Files
-                    .walk(directory.toPath(), 2)
+        try (Stream<Path> walk = Files.walk(directory.toPath(), 2)) {
+            resultList = walk
                     .filter(Files::isRegularFile)
                     .filter(path -> path.toString().endsWith(".zip"))
                     .sorted(Comparator.comparing(zipFile -> {
@@ -42,7 +41,7 @@ public class FileLister {
                         filesCounter.incrementAndGet();
                         return each;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             LOGGER.info("Loaded {} files from directory {}", filesCounter.get(), directory);
         } catch (IOException e) {
